fixed e3c9fa2 from https://gitee.com/wpgavin/global_resmgr_standard/pulls/44 modify calc density
Signed-off-by: wplan1 <wangpeng163@huawei.com>

--- a/frameworks/resmgr/BUILD.gn
+++ b/frameworks/resmgr/BUILD.gn
@@ -53,6 +53,12 @@ ohos_shared_library("global_resmgr") {
 
   defines = [ "CONFIG_HILOG" ]
 
+  if (defined(product_name) &&
+      (product_name == "rk3566" || product_name == "rk3568" ||
+       product_name == "Hi3516DV300")) {
+    defines += [ "PREDEFINED_DENSITY" ]
+  }
+
   configs = [ ":resmgr_config" ]
 
   public_configs = [ ":resmgr_public_config" ]
